[package]
name = "docker-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "docker_manager"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
bollard = "0.18.1"
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
